--- a/spring-ribbon-feign-hystrix-zuul/pom.xml
+++ b/spring-ribbon-feign-hystrix-zuul/pom.xml
@@ -22,6 +22,7 @@
         <module>service-ribbon</module>
         <module>serice-feign</module>
         <module>service-hi</module>
+        <module>service-zuul</module>
     </modules>
     <dependencyManagement>
         <dependencies>
