--- a/SpringCloud-sentinel-examples/spring-cloud-sentinel/pom.xml
+++ b/SpringCloud-sentinel-examples/spring-cloud-sentinel/pom.xml
@@ -41,6 +41,13 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba.csp/sentinel-transport-simple-http -->
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-transport-simple-http</artifactId>
+            <version>1.5.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
