--- a/SpringCloud-sentinel-examples/pom.xml
+++ b/SpringCloud-sentinel-examples/pom.xml
@@ -19,6 +19,7 @@
         <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
     </properties>
     <modules>
+        <module>spring-cloud-sentinel</module>
     </modules>
     <dependencyManagement>
         <dependencies>
