--- a/SpringCloud-sentinel-examples/spring-cloud-sentinel/src/main/resources/application.yml
+++ b/SpringCloud-sentinel-examples/spring-cloud-sentinel/src/main/resources/application.yml
@@ -7,11 +7,13 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848
+        server-addr: 192.168.10.100:8848
+        ip: 192.168.10.100
     sentinel:
       transport:
-        dashboard: localhost:8080
+        dashboard: 192.168.10.100:8080
         port: 8719
+        client-ip: 192.168.10.100
 
 management:
   endpoints:
