--- a/SpringCloud-alibaba-seata-examples/seata-account-service/src/main/resources/application.yml
+++ b/SpringCloud-alibaba-seata-examples/seata-account-service/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
         server-addr: localhost:8848
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/seata_account
+    url: jdbc:mysql://localhost:3306/seata_account?serverTimezone=UTC
     username: leellun
     password: liulun666
 
