<dependency>             <groupId>mysql</groupId>             <artifactId>mysql-connector-java</artifactId>         </dependency>

--- a/spring-cloud-hmily-tcc/hmily-demo-tcc-springcloud-inventory/src/main/resources/application.yml
+++ b/spring-cloud-hmily-tcc/hmily-demo-tcc-springcloud-inventory/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     main:
         allow-bean-definition-overriding: true
     datasource:
-        driver-class-name:  com.mysql.jdbc.Driver
+        driver-class-name:  com.mysql.cj.jdbc.Driver
         url: jdbc:mysql://127.0.0.1:3306/hmily_stock?useUnicode=true&characterEncoding=utf8
         username: root
         password:
