--- a/spring-cloud-hmily-tcc/hmily-demo-tcc-springcloud-inventory/pom.xml
+++ b/spring-cloud-hmily-tcc/hmily-demo-tcc-springcloud-inventory/pom.xml
@@ -110,7 +110,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
