--- a/spring-cloud-hmily-tcc/hmily-demo-tcc-springcloud-order/src/main/resources/hmily.yml
+++ b/spring-cloud-hmily-tcc/hmily-demo-tcc-springcloud-order/src/main/resources/hmily.yml
@@ -26,7 +26,7 @@ hmily:
 
 repository:
   database:
-    driverClassName: com.mysql.jdbc.Driver
+    driverClassName: com.mysql.cj.jdbc.Driver
     url : jdbc:mysql://127.0.0.1:3306/hmily?useUnicode=true&characterEncoding=utf8
     username: root
     password:
