--- a/spring-cloud-hmily-tcc/hmily-tcc-order/hmily-tcc-order-web/pom.xml
+++ b/spring-cloud-hmily-tcc/hmily-tcc-order/hmily-tcc-order-web/pom.xml
@@ -27,7 +27,10 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
